--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,12 +5,12 @@ publish_to: 'none'
 version: 0.1.0+100
 
 environment:
-  sdk: ">=2.14.0 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: '>=2.17.3 <3.0.0'
+  flutter: '>=3.0.2 <4.0.0'
 
 dependencies:
-  flame: 1.0.0
-  spine_core: ^0.3.2
+  flame: 1.2.0
+  spine_core: ^0.3.3
 
   spine_flutter:
     path: ../spine_flutter
@@ -22,7 +22,7 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
-  dartdoc: ^4.1.0
+  dartdoc: ^5.1.2
   flutter_test:
     sdk: flutter
-  dart_code_metrics: ^4.1.0
+  dart_code_metrics: ^4.16.0
